--- a/package.json
+++ b/package.json
@@ -2,32 +2,30 @@
   "name": "restful_api_start_kit",
   "version": "1.0.0",
   "main": "src/index.js",
-  "repository": "https://github.com/andy6804tw/RESTful_API_start_kit.git",
-  "author": "Tsai Yi Lin <andy6804tw@yahoo.com.tw>",
   "license": "MIT",
   "scripts": {
     "build": "webpack -w",
     "build:prod": "webpack -p",
     "start": "nodemon dist/index.bundle.js",
-    "test":"mocha"
+    "test": "mocha"
   },
   "dependencies": {
-    "bcrypt": "^1.0.3",
-    "body-parser": "^1.18.2",
-    "cors": "^2.8.4",
-    "dotenv": "^4.0.0",
-    "express": "^4.16.2",
+    "bcrypt": "^3.0.5",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
     "express-validation": "^1.0.2",
     "http-status": "^1.0.1",
     "joi": "^13.0.2",
-    "jsonwebtoken": "^8.1.0",
-    "morgan": "^1.9.0",
-    "mysql": "^2.15.0"
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.9.1",
+    "mysql": "^2.16.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.2",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
@@ -36,7 +34,8 @@
     "eslint-plugin-import": "^2.8.0",
     "mocha": "^4.1.0",
     "supertest": "^3.0.0",
-    "webpack": "^3.9.1",
-    "webpack-node-externals": "^1.6.0"
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.0.0",
+    "webpack-node-externals": "^1.7.2"
   }
 }
