--- a/.example.env
+++ b/.example.env
@@ -3,6 +3,6 @@ NODE_ENV=development
 MYSQL_HOST=localhost 
 MYSQL_PORT=3306 
 MYSQL_USER=root 
-MYSQL_PASS=wjxeqbSeB7.1
+MYSQL_PASS=******
 MYSQL_DATABASE=Community 
 VERSION=1.0.0
